--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -2,6 +2,9 @@ sidenavtitle: 'MATH F615'
 
 docs:
 
+- title: Advertisement
+  url: assets/general/S23/advert.pdf  # delete once course started
+
 - title: Syllabus
   url: assets/general/S23/syllabus.pdf  # rebuild by "make syllabus.pdf" in assets/general/S23/
 
