--- a/_data/homework.yml
+++ b/_data/homework.yml
@@ -9,3 +9,9 @@ homework:
   due: Mon 13 February
   blank: A2.pdf
   sections: 2.5-2.10
+- name: Assignment 3
+  due: Wed 15 February
+  blank: A3.pdf
+  sections: 4.1-4.2, 2.16
+  seealsoname: Classical iterative methods slides
+  seealsopdf: https://bueler.github.io/nade/assets/slides/iterative.pdf
