intended to commit this too ...

--- a/_data/homework.yml
+++ b/_data/homework.yml
@@ -10,7 +10,7 @@ homework:
   blank: A2.pdf
   sections: 2.5-2.10
 - name: Assignment 3
-  due: Wed 15 February
+  due: Mon 20 February (revised)
   blank: A3.pdf
   sections: 4.1-4.2, 2.16
   seealsoname: Classical iterative methods slides
