--- a/_data/homework.yml
+++ b/_data/homework.yml
@@ -15,3 +15,7 @@ homework:
   sections: 4.1-4.2, 2.16
   seealsoname: Classical iterative methods slides
   seealsopdf: https://bueler.github.io/nade/assets/slides/iterative.pdf
+- name: Assignment 4
+  due: Mon 27 February
+  blank: A4.pdf
+  sections: 2.12--2.18, 3.1--3.4
