--- a/_data/worksheets.yml
+++ b/_data/worksheets.yml
@@ -2,14 +2,15 @@ semester: Spring 2023
 home: assets/worksheets/S23
 worksheets:
 - name: Why Finite Difference Methods Work
-  description: A one-page summary of stages which prove convergence.
+  description: 1-page summary of convergence proof
   blank: whyitworks.pdf
-  more: See Chapter 2 of the textbook.  The <a href="https://en.wikipedia.org/wiki/Lax_equivalence_theorem">Lax equivalence theorem wiki page</a> gives the executive summary.
+  more: See Chapter 2 and <a href="https://en.wikipedia.org/wiki/Lax_equivalence_theorem">Lax equiv thm wiki page</a>
 #- name: FIXMEdate
   #description:
   #blank: x.pdf
   #solutions: convexity-solns.pdf
   #more: see <a href="https://en.wikipedia.org/wiki/Revised_simplex_method">revised simplex method wiki page</a>
 - name: Worksheet on section 2.17
-  description: 1st-versus-2nd order equations, and singular perturbations
+  description: 1st-vs-2nd order eqns; singular perturbations
   blank: singular.pdf
+  solutions: singular-solns.pdf
