--- a/_data/homework.yml
+++ b/_data/homework.yml
@@ -16,6 +16,6 @@ homework:
   seealsoname: Classical iterative methods slides
   seealsopdf: https://bueler.github.io/nade/assets/slides/iterative.pdf
 - name: Assignment 4
-  due: Mon 27 February
+  due: Wed 1 March (revised)
   blank: A4.pdf
   sections: 2.12--2.18, 3.1--3.4
