--- a/_data/homework.yml
+++ b/_data/homework.yml
@@ -19,3 +19,7 @@ homework:
   due: Wed 1 March (revised)
   blank: A4.pdf
   sections: 2.12--2.18, 3.1--3.4
+- name: Assignment 5
+  due: Mon 20 March
+  blank: A5.pdf
+  sections: 5.1--5.8, Appendices C, D
