--- a/_data/exams.yml
+++ b/_data/exams.yml
@@ -4,10 +4,7 @@ exams:
 - name: Midterm Exam
   date: Friday 24 March
   info: <b>in class</b>, Brooks 302
-  #reviewsheet: midreview.pdf
-  #sections: FIXME
-  #cont: FIXME
-  #contcont: FIXME
+  #reviewguide: midreview.pdf
   #blank: mid.pdf
   #solutions: midsolns.pdf
 - name: Final Exam
