--- a/_data/homework.yml
+++ b/_data/homework.yml
@@ -27,3 +27,7 @@ homework:
   due: Wed 29 March
   blank: A6.pdf
   sections: 5.3--5.8, 6.1--6.4
+- name: Assignment 7
+  due: Mon 10 April
+  blank: A7.pdf
+  sections: 7.1--7.6
