--- a/_data/homework.yml
+++ b/_data/homework.yml
@@ -31,3 +31,7 @@ homework:
   due: Mon 10 April
   blank: A7.pdf
   sections: 7.1--7.6
+- name: Assignment 8
+  due: Wed 19 April
+  blank: A8.pdf
+  sections: 8.1--8.6, 9.1--9.6
