--- a/_data/worksheets.yml
+++ b/_data/worksheets.yml
@@ -6,11 +6,11 @@ worksheets:
   blank: whyitworks.pdf
   more: See Chapter 2 and <a href="https://en.wikipedia.org/wiki/Lax_equivalence_theorem">Lax equiv thm wiki page</a>
 - name: Worksheet for section 2.17
-  description: 1st-vs-2nd order eqns; singular perturbations
+  description: 1st-vs-2nd order eqns singular perturbations
   blank: singular.pdf
-  solutions: singular-solns.pdf
+  solutions: solns/singular.pdf
 - name: Worksheet for sections 9.6 and 10.5
-  description: von Neumann analysis; plug and chug
+  description: von Neumann analysis plug and chug
   blank: vonneumann.pdf
-  #solutions: vonneumann-solns.pdf
+  solutions: solns/vonneumann.pdf
 
