fix typo on P37

--- a/_data/homework.yml
+++ b/_data/homework.yml
@@ -35,7 +35,7 @@ homework:
   due: Wed 19 April
   blank: A8.pdf
   sections: 8.1--8.6, 9.1--9.6
-- name: Assignment 9
+- name: Assignment 9 (corrected)
   due: Wed 26 April
   blank: A9.pdf
   sections: 9.7, 10.1--10.9
