start setting up final exam

--- a/_data/exams.yml
+++ b/_data/exams.yml
@@ -7,8 +7,9 @@ exams:
   reviewguide: midreview.pdf
   #blank: mid.pdf
   #solutions: midsolns.pdf
-- name: Final Exam
+- name: Final Exam = 2 case summaries
   date: Thursday 4 May, 10:15-12:15
   info: <b>in class</b>, Brooks 302
-  #doc: finalessays.pdf
+  #doc: finalcases.pdf
+  #examplecs: examplecasesummary.pdf
   #rubric: finalrubric.pdf
