--- a/_data/exams.yml
+++ b/_data/exams.yml
@@ -11,5 +11,5 @@ exams:
   date: Thursday 4 May, 10:15-12:15
   info: <b>in class</b>, Brooks 302
   doc: finalcases.pdf
-  #examplecs: examplecasesummary.pdf
+  examplecs: examplecs.pdf
   rubric: finalrubric.pdf
