--- a/_data/exams.yml
+++ b/_data/exams.yml
@@ -2,14 +2,14 @@ semester: Spring 2025
 home: assets/exams/S25
 exams:
 - name: Midterm Exam
-  date: FIXME
+  date: Friday 7 March
   info: <b>in class</b>
   #reviewguide: midreview.pdf
   #blank: mid.pdf
   #solutions: midsolns.pdf
 - name: Final Exam = 2 case summaries
-  date: FIXME
-  info: <b>in class</b>
+  date: Thursday 1 May
+  info: "<b>in class</b>, 3:15--5:15pm"
   #doc: finalcases.pdf
   #examplecs: examplecs.pdf
   #rubric: finalrubric.pdf
