--- a/_data/daily.yml
+++ b/_data/daily.yml
@@ -1,6 +1,10 @@
 semester: Spring 2025
 home: assets/
 daily:
+- name: Friday 17 January
+  covered: Chapter 1 basic finite differences
+- name: Wednesday 15 January
+  covered: examples; Taylor's theorem; linear ODEs
 - name: Monday 13 January
   covered: examples to get us started
 #  otherurl: https://bueler.github.io/opt/assets/slides/F24/mon16sep.pdf
