--- a/_data/daily.yml
+++ b/_data/daily.yml
@@ -1,6 +1,10 @@
 semester: Spring 2025
 home: assets/
 daily:
+- name: Wednesday 19 February
+  covered: "Chapter 3: 2D Poisson equation"
+- name: Monday 17 February
+  covered: advection-diffusion
 - name: Friday 14 February
   covered: advection, boundary layer
   handout: worksheets/S25/singular.pdf
