--- a/_data/homework.yml
+++ b/_data/homework.yml
@@ -2,7 +2,7 @@ semester: Spring 2025
 home: assets/homework/S25
 homework:
 - name: Assignment 4
-  due: Friday 21 February
+  due: Monday 24 February (updated)
   blank: A4.pdf
 - name: Assignment 3
   due: Monday 10 February
