--- a/_data/exams.yml
+++ b/_data/exams.yml
@@ -2,11 +2,11 @@ semester: Spring 2025
 home: assets/exams/S25
 exams:
 - name: Midterm Exam
-  date: Friday 7 March
+  date: Friday 21 March
   info: <b>in class</b>
   #reviewguide: midreview.pdf
-  #blank: mid.pdf
-  #solutions: midsolns.pdf
+  blank: midS23.pdf
+  solutions: midS23solns.pdf
 - name: Final Exam = 2 case summaries
   date: Thursday 1 May
   info: "<b>in class</b>, 3:15--5:15pm"
