put project go date

--- a/_data/daily.yml
+++ b/_data/daily.yml
@@ -2,7 +2,7 @@ semester: Spring 2025
 home: assets/
 daily:
 - name: Wednesday 26 March
-  covered: zero stability
+  covered: zero stability; project go!
 - name: Monday 24 March
   covered: proof of Euler convergence
   chapter: 6
