--- a/_data/daily.yml
+++ b/_data/daily.yml
@@ -5,7 +5,7 @@ daily:
   covered: stiffness
   chapter: 8
 - name: Wednesday 2 April
-  covered: systems
+  covered: absolute stability for systems
 - name: Monday 31 March
   covered: regions of absolute stability
   chapter: 7
