--- a/_data/homework.yml
+++ b/_data/homework.yml
@@ -1,6 +1,9 @@
 semester: Spring 2025
 home: assets/homework/S25
 homework:
+- name: Assignment 7
+  due: Friday 11 April
+  blank: A7.pdf
 - name: Assignment 6
   due: Monday 31 March
   blank: A6.pdf
