--- a/_data/exams.yml
+++ b/_data/exams.yml
@@ -10,6 +10,6 @@ exams:
 - name: Final Exam = 2 case summaries
   date: Thursday 1 May
   info: "<b>in class</b>, 3:15--5:15pm"
-  #doc: finalcases.pdf
-  #examplecs: examplecs.pdf
-  #rubric: finalrubric.pdf
+  doc: finalcases.pdf
+  examplecs: examplecs.pdf
+  rubric: finalrubric.pdf
